--- a/css/TTCommons.css
+++ b/css/TTCommons.css
@@ -4,7 +4,7 @@
  *
  * The fonts listed in this notice are subject to the End User License
  * Agreement(s) entered into by the website owner. All other parties are
- * explicitly restricted from using the Licensed assets/type(s).
+ * explicitly restricted from using the Licensed ../assets/type(s).
  *
  * You may obtain a valid license at the URLs below.
  *
@@ -40,7 +40,7 @@
  *
  *
  * Licensed pageviews: 20,000
- * assets/type copyright: Copyright (c) 2018-2019 by TypeType. Designers Ivan Gladkikh, Pavel Emelyanov. Technical designers Marina Khodak, Vika Usmanova, Nadyr Rakhimov, Antonina Zhulkova. All rights reserved.
+ * ../assets/type copyright: Copyright (c) 2018-2019 by TypeType. Designers Ivan Gladkikh, Pavel Emelyanov. Technical designers Marina Khodak, Vika Usmanova, Nadyr Rakhimov, Antonina Zhulkova. All rights reserved.
  *
  * © 2020 MyFonts Inc
 */
@@ -50,31 +50,31 @@
 @import url("//hello.myfonts.net/count/3ad501");
 
 
-@font-face {font-family: 'TTCommons-ExtraLight';src: url('assets/type/3AD501_0_0.eot');src: url('assets/type/3AD501_0_0.eot?#iefix') format('embedded-opentype'),url('assets/type/3AD501_0_0.woff2') format('woff2'),url('assets/type/3AD501_0_0.woff') format('woff'),url('assets/type/3AD501_0_0.ttf') format('truetype');}
+@font-face {font-family: 'TTCommons-ExtraLight';src: url('../assets/type/3AD501_0_0.eot');src: url('../../assets/type/3AD501_0_0.eot?#iefix') format('embedded-opentype'),url('../assets/type/3AD501_0_0.woff2') format('woff2'),url('../assets/type/3AD501_0_0.woff') format('woff'),url('../assets/type/3AD501_0_0.ttf') format('truetype');}
 
 
-@font-face {font-family: 'TTCommons-Thin';src: url('assets/type/3AD501_1_0.eot');src: url('assets/type/3AD501_1_0.eot?#iefix') format('embedded-opentype'),url('assets/type/3AD501_1_0.woff2') format('woff2'),url('assets/type/3AD501_1_0.woff') format('woff'),url('assets/type/3AD501_1_0.ttf') format('truetype');}
+@font-face {font-family: 'TTCommons-Thin';src: url('../assets/type/3AD501_1_0.eot');src: url('../assets/type/3AD501_1_0.eot?#iefix') format('embedded-opentype'),url('../assets/type/3AD501_1_0.woff2') format('woff2'),url('../assets/type/3AD501_1_0.woff') format('woff'),url('../assets/type/3AD501_1_0.ttf') format('truetype');}
 
 
-@font-face {font-family: 'TTCommons-Black';src: url('assets/type/3AD501_2_0.eot');src: url('assets/type/3AD501_2_0.eot?#iefix') format('embedded-opentype'),url('assets/type/3AD501_2_0.woff2') format('woff2'),url('assets/type/3AD501_2_0.woff') format('woff'),url('assets/type/3AD501_2_0.ttf') format('truetype');}
+@font-face {font-family: 'TTCommons-Black';src: url('../assets/type/3AD501_2_0.eot');src: url('../assets/type/3AD501_2_0.eot?#iefix') format('embedded-opentype'),url('../assets/type/3AD501_2_0.woff2') format('woff2'),url('../assets/type/3AD501_2_0.woff') format('woff'),url('../assets/type/3AD501_2_0.ttf') format('truetype');}
 
 
-@font-face {font-family: 'TTCommons-Bold';src: url('assets/type/3AD501_3_0.eot');src: url('assets/type/3AD501_3_0.eot?#iefix') format('embedded-opentype'),url('assets/type/3AD501_3_0.woff2') format('woff2'),url('assets/type/3AD501_3_0.woff') format('woff'),url('assets/type/3AD501_3_0.ttf') format('truetype');}
+@font-face {font-family: 'TTCommons-Bold';src: url('../assets/type/3AD501_3_0.eot');src: url('../assets/type/3AD501_3_0.eot?#iefix') format('embedded-opentype'),url('../assets/type/3AD501_3_0.woff2') format('woff2'),url('../assets/type/3AD501_3_0.woff') format('woff'),url('../assets/type/3AD501_3_0.ttf') format('truetype');}
 
 
-@font-face {font-family: 'TTCommons-Light';src: url('assets/type/3AD501_4_0.eot');src: url('assets/type/3AD501_4_0.eot?#iefix') format('embedded-opentype'),url('assets/type/3AD501_4_0.woff2') format('woff2'),url('assets/type/3AD501_4_0.woff') format('woff'),url('assets/type/3AD501_4_0.ttf') format('truetype');}
+@font-face {font-family: 'TTCommons-Light';src: url('../assets/type/3AD501_4_0.eot');src: url('../assets/type/3AD501_4_0.eot?#iefix') format('embedded-opentype'),url('../assets/type/3AD501_4_0.woff2') format('woff2'),url('../assets/type/3AD501_4_0.woff') format('woff'),url('../assets/type/3AD501_4_0.ttf') format('truetype');}
 
 
-@font-face {font-family: 'TTCommons-Medium';src: url('assets/type/3AD501_5_0.eot');src: url('assets/type/3AD501_5_0.eot?#iefix') format('embedded-opentype'),url('assets/type/3AD501_5_0.woff2') format('woff2'),url('assets/type/3AD501_5_0.woff') format('woff'),url('assets/type/3AD501_5_0.ttf') format('truetype');}
+@font-face {font-family: 'TTCommons-Medium';src: url('../assets/type/3AD501_5_0.eot');src: url('../assets/type/3AD501_5_0.eot?#iefix') format('embedded-opentype'),url('../assets/type/3AD501_5_0.woff2') format('woff2'),url('../assets/type/3AD501_5_0.woff') format('woff'),url('../assets/type/3AD501_5_0.ttf') format('truetype');}
 
 
-@font-face {font-family: 'TTCommons-ExtraBold';src: url('assets/type/3AD501_6_0.eot');src: url('assets/type/3AD501_6_0.eot?#iefix') format('embedded-opentype'),url('assets/type/3AD501_6_0.woff2') format('woff2'),url('assets/type/3AD501_6_0.woff') format('woff'),url('assets/type/3AD501_6_0.ttf') format('truetype');}
+@font-face {font-family: 'TTCommons-ExtraBold';src: url('../assets/type/3AD501_6_0.eot');src: url('../assets/type/3AD501_6_0.eot?#iefix') format('embedded-opentype'),url('../assets/type/3AD501_6_0.woff2') format('woff2'),url('../assets/type/3AD501_6_0.woff') format('woff'),url('../assets/type/3AD501_6_0.ttf') format('truetype');}
 
 
-@font-face {font-family: 'TTCommons-DemiBold';src: url('assets/type/3AD501_7_0.eot');src: url('assets/type/3AD501_7_0.eot?#iefix') format('embedded-opentype'),url('assets/type/3AD501_7_0.woff2') format('woff2'),url('assets/type/3AD501_7_0.woff') format('woff'),url('assets/type/3AD501_7_0.ttf') format('truetype');}
+@font-face {font-family: 'TTCommons-DemiBold';src: url('../assets/type/3AD501_7_0.eot');src: url('../assets/type/3AD501_7_0.eot?#iefix') format('embedded-opentype'),url('../assets/type/3AD501_7_0.woff2') format('woff2'),url('../assets/type/3AD501_7_0.woff') format('woff'),url('../assets/type/3AD501_7_0.ttf') format('truetype');}
 
 
-@font-face {font-family: 'TTCommons-Regular';src: url('assets/type/3AD501_8_0.eot');src: url('assets/type/3AD501_8_0.eot?#iefix') format('embedded-opentype'),url('assets/type/3AD501_8_0.woff2') format('woff2'),url('assets/type/3AD501_8_0.woff') format('woff'),url('assets/type/3AD501_8_0.ttf') format('truetype');}
+@font-face {font-family: 'TTCommons-Regular';src: url('../assets/type/3AD501_8_0.eot');src: url('../assets/type/3AD501_8_0.eot?#iefix') format('embedded-opentype'),url('../assets/type/3AD501_8_0.woff2') format('woff2'),url('../assets/type/3AD501_8_0.woff') format('woff'),url('../assets/type/3AD501_8_0.ttf') format('truetype');}
 
 
-@font-face {font-family: 'TTCommons-Book';src: url('assets/type/3AD501_9_0.eot');src: url('assets/type/3AD501_9_0.eot?#iefix') format('embedded-opentype'),url('assets/type/3AD501_9_0.woff2') format('woff2'),url('assets/type/3AD501_9_0.woff') format('woff'),url('assets/type/3AD501_9_0.ttf') format('truetype');}
+@font-face {font-family: 'TTCommons-Book';src: url('../assets/type/3AD501_9_0.eot');src: url('../assets/type/3AD501_9_0.eot?#iefix') format('embedded-opentype'),url('../assets/type/3AD501_9_0.woff2') format('woff2'),url('../assets/type/3AD501_9_0.woff') format('woff'),url('../assets/type/3AD501_9_0.ttf') format('truetype');}
