Fix Peapod video

--- a/css/custom.css
+++ b/css/custom.css
@@ -175,4 +175,4 @@ h1.xl, .h1.largest {font-size: 72px;line-height: 1;letter-spacing:0;}
 }
 
 /* Peapod */
-.peapodVideo {max-height:348px;}
+/* .videoThumbnail {max-height:348px;} */
