--- a/css/custom.css
+++ b/css/custom.css
@@ -6,7 +6,16 @@
   font-family: 'TTCommons-Regular','-apple-system','BlinkMacSystemFont','Segoe UI',Helvetica,Arial,sans-serif;
 }
 
+/* Side */
+@media (min-width: 1380px) {
+  .side {
+    padding-left: 36px;
+    padding-right: 36px;
+  }
+}
+
 /* Colors */
+.newBlack {background: #000000 !important;}
 .newTeal {background: #01CEAC !important; color: #FFF !important;}
 .newTealText {color: #01CEAC !important;}
 .newMango {background: #FFB300 !important; color: #FFF !important;}
@@ -30,27 +39,35 @@
 /* Panel Colors Overrides */
 .slides.stage-1 {background: #202020;}
 .slides.stage-2 {background: #202020;}
-.slides.stage-3 {background: #1C90FF;}                                  /* Ruum */
-.slides.stage-3 .panel svg {fill:#1C90FF !important;}                   /* Ruum */
-.slides.stage-3 .navigation li:after {background: #1C90FF !important;}  /* Ruum */
-.slides.stage-4 {background: #01CEAC;}                                  /* Dabra */
-.slides.stage-4 .panel svg {fill:#01CEAC !important;}                   /* Dabra */
-.slides.stage-4 .navigation li:after {background: #01CEAC !important;}  /* Dabra */
-.slides.stage-5 {background: #FFB300;}                                  /* Icons */
-.slides.stage-5 .panel svg {fill:#FFB300 !important;}                   /* Icons */
-.slides.stage-5 .navigation li:after {background: #FFB300 !important;}  /* Icons */
-.slides.stage-6 {background: #5D36FF;}                                  /* Atlas */
-.slides.stage-6 .panel svg {fill:#5D36FF !important;}                   /* Atlas */
-.slides.stage-6 .navigation li:after {background: #5D36FF !important;}  /* Atlas */
-.slides.stage-7 {background: #465E75;}                                  /* Spotlight */
-.slides.stage-7 .panel svg {fill:#465E75 !important;}                   /* Spotlight */
-.slides.stage-7 .navigation li:after {background: #465E75 !important;}  /* Spotlight */
-.slides.stage-8 {background: #EE3939;}                                  /* Flipboard */
-.slides.stage-8 .panel svg {fill:#EE3939 !important;}                   /* Flipboard */
-.slides.stage-8 .navigation li:after {background: #EE3939 !important;}  /* Flipboard */
-.slides.stage-9 {background: #5DC121;}                                  /* Peapod */
-.slides.stage-9 .panel svg {fill:#5DC121 !important;}                   /* Peapod */
-.slides.stage-9 .navigation li:after {background: #5DC121 !important;}  /* Peapod */
+.slides.stage-3 {background: #1C90FF;}                                    /* Ruum */
+.slides.stage-3 .panel svg {fill:#1C90FF !important;}                     /* Ruum */
+.slides.stage-3 .navigation li:after {background: #1C90FF !important;}    /* Ruum */
+.slides.stage-3 .click .switchElement {background: #1C90FF !important;}   /* Ruum */
+.slides.stage-4 {background: #01CEAC;}                                    /* Dabra */
+.slides.stage-4 .panel svg {fill:#01CEAC !important;}                     /* Dabra */
+.slides.stage-4 .navigation li:after {background: #01CEAC !important;}    /* Dabra */
+.slides.stage-4 .click .switchElement {background: #01CEAC !important;}   /* Dabra */
+.slides.stage-5 {background: #FFB300;}                                    /* Icons */
+.slides.stage-5 .panel svg {fill:#FFB300 !important;}                     /* Icons */
+.slides.stage-5 .navigation li:after {background: #FFB300 !important;}    /* Icons */
+.slides.stage-5 .click .switchElement {background: #FFB300 !important;}   /* Icons */
+.slides.stage-6 {background: #5D36FF;}                                    /* Atlas */
+.slides.stage-6 .panel svg {fill:#5D36FF !important;}                     /* Atlas */
+.slides.stage-6 .navigation li:after {background: #5D36FF !important;}    /* Atlas */
+.slides.stage-6 .click .switchElement {background: #5D36FF !important;}   /* Icons */
+.slides.stage-7 {background: #465E75;}                                    /* Spotlight */
+.slides.stage-7 .panel svg {fill:#465E75 !important;}                     /* Spotlight */
+.slides.stage-7 .navigation li:after {background: #465E75 !important;}    /* Spotlight */
+.slides.stage-7 .click .switchElement {background: #465E75 !important;}   /* Spotlight */
+.slides.stage-8 {background: #EE3939;}                                    /* Flipboard */
+.slides.stage-8 .panel svg {fill:#EE3939 !important;}                     /* Flipboard */
+.slides.stage-8 .navigation li:after {background: #EE3939 !important;}    /* Flipboard */
+.slides.stage-8 .click .switchElement {background: #EE3939 !important;}   /* Flipboard */
+.slides.stage-9 {background: #5DC121;}                                    /* Peapod */
+.slides.stage-9 .panel svg {fill:#5DC121 !important;}                     /* Peapod */
+.slides.stage-9 .navigation li:after {background: #5DC121 !important;}    /* Peapod */
+.slides.stage-9 .click .switchElement {background: #5DC121 !important;}   /* Peapod */
+.slides.stage-10 .click .switchElement {background: #606060 !important;}  /* Motorola */
 
 /* Typography */
 .TTCommons-Thin, .ultraLight, .thin {         font-family: 'TTCommons-Thin';        font-weight: normal !important; font-style: normal !important;}
@@ -77,6 +94,8 @@ h1.xl, .h1.largest {font-size: 72px;line-height: 1;letter-spacing:0;}
 
 /* Buttons */
 .button {font-size: 18px;}
+/* .button.actionButton.big {width: 48px; height: 48px; padding: 12px;}
+.button.actionButton.big svg {left: 0px; top: 2px;} */
 
 /* Preloader */
 .progress-bar-container {
@@ -170,7 +189,8 @@ h1.xl, .h1.largest {font-size: 72px;line-height: 1;letter-spacing:0;}
 
 /* Flipboard */
 @media (max-width: 768px) {
-  .whiteSlide[class*=fade-3] .content {background: rgba(0,0,0,.75)}
+  .fade-3 .content {background: rgba(0,0,0,.6)}
+  .whiteSlide[class*=fade-3] .content {background: rgba(0,0,0,.6)}
   .popup .background, .slide .background {background-position: right;}
 }
 @media (min-width: 768px) {
